--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <div class="inputContainer addBtnContainer" id="addTask">
       <div class="taskFeild" id="taskFeild">
-        <label class="lable" for="inputHeading">Enter Task</label>
+        <label class="lable bigFont" for="inputHeading">Enter Task</label>
         <input
           placeholder="Your Task"
           class="input"
           type="text"
           id="inputHeading"
         />
-        <label class="lable" for="selectOption">Task type</label>
+        <label class="lable bigFont" for="selectOption">Task type</label>
         <select id="select">
           <option value="notStarted">Not Started</option>
           <option value="inProgress">In Progress</option>
@@ -39,7 +39,7 @@
 
     <div class="inputContainer popContainer" id="editTask">
       <div class="taskFeild" id="taskFeild">
-        <label class="lable" for="EditInput">Edit Task</label>
+        <label class="lable bigFont" for="EditInput">Edit Task</label>
         <input
           placeholder="Your Task"
           class="input"
@@ -55,6 +55,7 @@
 
     <div class="templateContainer" id="info">
       <div class="taskInfo" id="taskInfo">
+        <h2 class="heading bigFont">Your Task</h2>
         <h3 class="heading" id="headingText">SomeText</h3>
       </div>
     </div>
