--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
     </div>
 
     <section class="mainContainer">
-      <div class="Container" id="notStartedContainer">
+      <div class="Container">
         <h2 class="headingText">Not Started</h2>
-        <ul class="taskList"></ul>
+        <ul class="taskList" id="notStartedContainer"></ul>
         <button class="addBtn">+ Add</button>
       </div>
-      <div class="Container" id="inProgressContainer">
+      <div class="Container">
         <h2 class="headingText">In Progress</h2>
-        <ul class="taskList"></ul>
+        <ul class="taskList" id="inProgressContainer"></ul>
         <button class="addBtn">+ Add</button>
       </div>
-      <div class="Container" id="CompletedContainer">
+      <div class="Container">
         <h2 class="headingText">Completed</h2>
-        <ul class="taskList"></ul>
+        <ul class="taskList" id="CompletedContainer"></ul>
         <button class="addBtn">+ Add</button>
       </div>
     </section>
